hphp/hack/test/typecheck/const_attribute/union_intersection/const_union_and_dependent_fail.php.exp
File "const_union_and_dependent_fail.php", line 28, characters 7-8:
Cannot mutate a `__Const` property (Typing[4196])
